# color_blame

./: .travis.yml  Dockerfile  Makefile  README.md  dev_requirements.txt  git-blame-colored.py  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: pr.yml  publish.yml
colorize/: git_colorize.py  svn_colorize.py
colorize/tests/: test_git_colorize.py  test_svn_colorize.py
