[tool.poetry]
name = "colorize"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
terminaltables = {git = "https://github.com/kyokley/terminaltables.git"}

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"
pdbpp = "^0.10.3"
pytest = "^6.2.5"
mock = "^4.0.3"
setuptools = "^60.1.0"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
